<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="pending">Pending</string>
    <string name="unknown">Unknown</string>

    <string name="app_name">Demo App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">v1.1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Seed Phrase</string>
    <string name="action_faucet">Testnet Faucet</string>
    <string name="action_reset_sdk">Reset SDK</string>

    <!-- Drawer Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_address">Get Address</string>
    <string name="menu_server">Server</string>
    <string name="menu_balance">Get Balance</string>
    <string name="menu_keys">Private Keys</string>
    <string name="menu_latest_height">Get Latest Height</string>
    <string name="menu_block">Get Block</string>
    <string name="menu_block_range">Get Block Range</string>
    <string name="menu_decrypt">Decrypt Block</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_utxos">List UTXOs</string>
    <string name="menu_send">Send</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="load">Load</string>
    <string name="apply">Apply</string>
    <string name="loading">⌛ Loading</string>
    <string name="unified_address">Unified address</string>
    <string name="sapling_address">Sapling address</string>
    <string name="transparent_address">Transparent address</string>
    <string name="action_refresh_exchange_rate">Refresh Exchange Rate</string>
    <string name="action_shield">Shield Funds</string>
    <string name="send_status">Send status: <xliff:g id="status" example="Idle">%1$s</xliff:g></string>

    <string name="unified_address_tag">Zcash unified address</string>
    <string name="sapling_address_tag">Zcash sapling address</string>
    <string name="transparent_address_tag">Zcash transparent address</string>
    <string name="address_copied" formatted="true">Copied to clipboard: <xliff:g id="address"
        example="t1TdMMj5zzMtt...">%1$s</xliff:g></string>

    <string name="configure_seed">Please select your wallet secret phrase</string>
    <string name="person_alyssa">Alyssa P. Hacker</string>
    <string name="person_ben">Ben Bitdiddle</string>
    <string name="seed_custom">Type in a secret phrase</string>
    <string name="seed_birthday_optional">Type in a birthday (optional)</string>
    <string name="seed_random">Generate a new random secret phrase</string>
    <string name="seed_estimate_bd_btn">Estimate birthday height</string>
    <string name="seed_estimate_bd_dialog_btn">Use selected date</string>
    <string name="seed_restore">Restore wallet</string>

    <string name="home_accounts">
        The wallet\'s accounts:
        <xliff:g id="accounts" example="Account(uuid1), Account(uuid2)">%1$s</xliff:g>
    </string>
    <string name="home_current_account">
        Selected account:
        <xliff:g id="account" example="Account(uuid1)">%1$s</xliff:g>
    </string>
    <string name="home_status">Status: <xliff:g id="status" example="Syncing">%1$s</xliff:g></string>
    <string name="home_progress">Progress: <xliff:g id="percentage" example="15%">%1$.2f</xliff:g>%%</string>
    <string name="home_are_funds_spendable">
        Can wallet spend: <xliff:g id="spendable" example="true">%1$s</xliff:g>
    </string>

    <string name="balance_transparent">Transparent</string>
    <string name="balance_sapling">Sapling</string>
    <string name="balance_orchard">Orchard</string>
    <string name="balance_available_amount_format">Available:
        <xliff:g id="ZEC balance" example="0.3">%1$s</xliff:g>
        (<xliff:g id="USD balance" example="7.2">%2$s</xliff:g> USD)</string>
    <string name="balance_pending_amount_format">Pending:
        <xliff:g id="ZEC balance" example="0.3">%1$s</xliff:g>
        (<xliff:g id="USD balance" example="7.2">%2$s</xliff:g> USD)</string>
    <string name="balances_refresh">Refresh balances</string>

    <string name="send_amount">Amount</string>

    <string name="send_alyssa_unified">Alyssa’s unified address</string>
    <string name="send_alyssa_sapling">Alyssa’s sapling address</string>
    <string name="send_alyssa_transparent">Alyssa’s transparent address</string>

    <string name="send_ben_unified">Ben’s unified address</string>
    <string name="send_ben_sapling">Ben’s sapling address</string>
    <string name="send_ben_transparent">Ben’s transparent address</string>

    <string name="send_available_balance">Available Sapling balance: </string>
    <string name="send_to_address">Destination address</string>
    <string name="send_memo">Memo</string>
    <string name="send_zip_321_uri">ZIP 321 Uri</string>
    <string name="send_button">Send</string>

    <string name="send_proposal_button">Get Proposal</string>
    <string name="send_proposal_from_uri_button">Get Proposal from Uri</string>
    <string name="send_proposal_status">Proposal:\n<xliff:g id="proposal" example="Fee:0.001...">%1$s</xliff:g></string>

    <string name="server_textfield_value"><xliff:g id="host" example="example.com">%1$s</xliff:g>:<xliff:g id="port" example="508">%2$d</xliff:g></string>
    <string name="server_textfield_hint">&lt;host&gt;:&lt;port&gt;</string>
    <string name="server_textfield_error">Invalid server</string>
    <string name="server_custom">custom</string>
    <string name="server_save">Save</string>
    <string name="server_fastest_servers">Fastest servers:</string>

    <string name="transactions_refresh">Refresh transactions</string>

    <string name="transaction_time">Time:</string>
    <string name="transaction_value">Value:</string>
    <string name="transaction_fee">Fee:</string>
    <string name="transaction_fee_unavailable">Unavailable</string>
    <string name="transaction_status">Status:</string>
</resources>
