<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Note: We hide entire group on SDK sync related screens -->
    <group android:id="@+id/main_menu_group">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_faucet"
            android:orderInCategory="100"
            android:title="@string/action_faucet"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_reset_sdk"
            android:orderInCategory="100"
            android:title="@string/action_reset_sdk"
            app:showAsAction="never" />
    </group>
</menu>
